<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal">
<RelativeLayout android:layout_height="wrap_content" android:id="@+id/relativeLayout1" android:layout_width="fill_parent" android:layout_margin="10dp">
    <TextView android:layout_height="wrap_content" android:text="@string/start_survey_prompt" android:gravity="center" android:id="@+id/moodPromptTextView" android:layout_width="fill_parent" android:textAppearance="?android:attr/textAppearanceLarge"></TextView>
    <SeekBar android:id="@+id/moodSeekBar" android:layout_height="wrap_content" android:layout_width="fill_parent" android:progress="50" android:layout_centerInParent="true"></SeekBar>
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentTop="true" android:id="@+id/badMoodTextView" android:text="@string/start_survey_low" android:layout_centerVertical="true"></TextView>
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentTop="true" android:id="@+id/goodMoodTextView" android:layout_alignParentRight="true" android:text="@string/start_survey_high" android:layout_centerVertical="true"></TextView>

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/next_continue" >
</Button>
</RelativeLayout>
</LinearLayout>
