<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" android:gravity="center">
    <TextView
        android:id="@+id/mainTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        android:textAppearance="?android:attr/textAppearanceLarge" android:paddingBottom="60dp"/>
    <Button
        android:id="@+id/playButtonMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play" android:padding="20dp" android:layout_marginBottom="10dp" android:layout_marginLeft="50dp" android:layout_marginRight="50dp"/>

    <Button
        android:id="@+id/registerButtonMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:padding="20dp"
        android:text="@string/register" />

</LinearLayout>