<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    style="android:style/Theme.Dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/resultsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/winning_message"
        android:textAppearance="?android:attr/textAppearanceLarge" android:layout_centerInParent="true"/>

    
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/exitButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/exit" 
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/button1"
                android:text="invisible"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="invisible" android:clickable="false"/>

            <Button
                android:id="@+id/replayButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/replay" 
                android:layout_weight="1"/>

        </LinearLayout>

</RelativeLayout>